--- a/android/app/src/main/res/layout/overlay_layout.xml
+++ b/android/app/src/main/res/layout/overlay_layout.xml
@@ -6,20 +6,15 @@
     android:background="@android:color/transparent"
     android:padding="0dp">
 
-    <Button
+    <ImageButton
         android:id="@+id/scanButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Scan"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:src="@drawable/ic_scan"
         android:background="@drawable/scan_button_background"
-        android:textColor="#FFFFFF"
-        android:textSize="14sp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:minWidth="0dp"
-        android:minHeight="0dp" />
+        android:padding="12dp"
+        android:scaleType="fitCenter"
+        android:contentDescription="Scan screen" />
 
     <!-- <Button
         android:id="@+id/closeButton"
